...

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/scoreResultText"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">
...
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toMain"
                android:background="@color/buttonColor"
                android:textColor="@color/accentTextIcon"
                android:id="@+id/backToMainScreen"
                android:onClick="onClick"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
