<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.hib.dat153.compulsory2.activities.ImagesActivity">


    <FrameLayout
        android:id="@+id/imageFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageOwnerImagePicture"
            android:layout_gravity="left"/>


        <TextView
            android:text="TEXT"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageOwnerImageText"
            android:textColor="@color/accentTextIcon"
            android:layout_gravity="right|bottom" />
    </FrameLayout>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="418dp"
        android:id="@+id/imageListView"
        android:background="@color/accentTextIcon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageFrameLayout" />

</RelativeLayout>