...
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp">

        <EditText
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/accentTextIcon"
...
